# vais-runtime

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  Dockerfile.smoketest  GOVERNANCE.md  LICENSE  NOTICE  NuGet.config  QUICKSTART.md  README.md  SECURITY.md  Vais.Agents.sln  Vais2.Agents.sln  vais.runsettings
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml
contracts/: opa-input-schema.md
contracts/examples/: Agent.example.yaml  AgentGraph.example.yaml  ContainerPlugin.example.yaml  EvalSuite.example.yaml  LlmGatewayConfig.example.yaml  McpGatewayConfig.example.yaml  McpServer.example.yaml
contracts/extensions/: handler-protocol.md
contracts/ontology/: base-ontology.json  overlay.example.json
contracts/plugin-container/: gateway-internal.md  plugin-protocol.md
contracts/reference/: Agent.md  AgentGraph.md  ContainerPlugin.md  (+4 more)
deploy/: README.md  demo-test.ps1  shutdown-drain-test.ps1
docs/: index.md
plans/: actor-agents-oss-architecture-review.md  actor-agents-oss-dependency-upgrade-review.md  actor-agents-oss-extraction-research.md  actor-agents-oss-housekeeping-docs-plan.md  actor-agents-oss-housekeeping-samples-plan.md  actor-agents-oss-milestone-log.md  actor-agents-oss-phase-3-runtime-productisation.md  actor-agents-oss-polyglot-plugins-example.md  actor-agents-oss-polyglot-plugins-findings.md  actor-agents-oss-polyglot-plugins-spike.md  actor-agents-oss-v0.10-streaming-pipeline-findings.md  actor-agents-oss-v0.10-streaming-pipeline-pillar.md  actor-agents-oss-v0.10-streaming-pipeline-spike.md  actor-agents-oss-v0.11-openapi-idempotency-findings.md  actor-agents-oss-v0.11-openapi-idempotency-pillar.md  actor-agents-oss-v0.11-openapi-idempotency-spike.md  actor-agents-oss-v0.12-sse-streaming-invoke-findings.md  actor-agents-oss-v0.12-sse-streaming-invoke-pillar.md  actor-agents-oss-v0.12-sse-streaming-invoke-spike.md  actor-agents-oss-v0.13-kubernetes-operator-findings.md  actor-agents-oss-v0.13-kubernetes-operator-pillar.md  actor-agents-oss-v0.13-kubernetes-operator-spike.md  actor-agents-oss-v0.14-opa-policy-engine-findings.md  actor-agents-oss-v0.14-opa-policy-engine-pillar.md  actor-agents-oss-v0.14-opa-policy-engine-spike.md  actor-agents-oss-v0.15-cli-findings.md  actor-agents-oss-v0.15-cli-pillar.md  actor-agents-oss-v0.15-cli-spike.md  actor-agents-oss-v0.16-runtime-container-findings.md  actor-agents-oss-v0.16-runtime-container-pillar.md  actor-agents-oss-v0.16-runtime-container-spike.md  actor-agents-oss-v0.17-manifest-instantiation-findings.md  actor-agents-oss-v0.17-manifest-instantiation-pillar.md  actor-agents-oss-v0.17-manifest-instantiation-spike.md  actor-agents-oss-v0.18-plugin-model-findings.md  actor-agents-oss-v0.18-plugin-model-pillar.md  actor-agents-oss-v0.18-plugin-model-spike.md  actor-agents-oss-v0.19-graph-as-deployable-findings.md  actor-agents-oss-v0.19-graph-as-deployable-pillar.md  actor-agents-oss-v0.19-graph-as-deployable-spike.md  (+33 more)
samples/: Directory.Build.props  Directory.Packages.props  NuGet.config  README.md  build-all.ps1  build-all.sh
samples/PluginAgentLangGraphResearcher/langgraph-researcher/: Dockerfile.overlay  plugin.yaml  pyproject.toml
samples/PluginAgentLangGraphResearcher/langgraph-researcher/src/langgraph_researcher/: graph.py  server.py
samples/PluginAgentLangGraphResearcher/langgraph-researcher/src/langgraph_researcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
samples/PluginAgentLangGraphResearcherLive/langgraph-researcher-live/: Dockerfile.overlay  plugin.yaml  pyproject.toml
samples/PluginAgentLangGraphResearcherLive/langgraph-researcher-live/src/langgraph_researcher_live/: agent.py  graph.py  server.py  state.py
samples/PluginAgentResearchPipeline/sgr-analyst/: Dockerfile.overlay  plugin.yaml  pyproject.toml
samples/PluginAgentResearchPipeline/sgr-analyst/src/sgr_analyst/: agent.py  research.py  server.py
samples/PluginAgentResearchPlanner/research-planner/: Dockerfile.overlay  plugin.yaml  pyproject.toml
samples/PluginAgentResearchPlanner/research-planner/src/research_planner/: planner.py  schemas.py  server.py
samples/SectionedPlugin/sectioned-plugin/: pyproject.toml
samples/SectionedPlugin/sectioned-plugin/src/sectioned_plugin/: __init__.py  agent.py  server.py
samples/SectionedPlugin/sectioned-plugin/tests/: test_invoke.py
samples/SectionedPluginLegacy/sectioned-plugin-legacy/: pyproject.toml
samples/SectionedPluginLegacy/sectioned-plugin-legacy/src/sectioned_plugin_legacy/: __init__.py  agent.py  server.py
samples/SectionedPluginLegacy/sectioned-plugin-legacy/tests/: test_invoke.py
samples/python-agent-sdk/: pyproject.toml
samples/python-agent-sdk/src/vais_agent_sdk/: __init__.py  _errors.py  _models.py  _otel.py  _runner.py  langchain_compat.py  sections.py
samples/python-agent-sdk/src/vais_agent_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
samples/python-agent-sdk/src/vais_agent_sdk/adapters/: __init__.py  openai.py
samples/python-agent-sdk/tests/: test_error_codes.py  test_models.py  test_openai_adapter.py  test_runner.py  test_sections.py
sdk/python/: README.md  conftest.py  pyproject.toml
sdk/python/tests/: test_error_handling.py  test_host.py  test_import_guard.py  test_log_handler.py  test_telemetry.py  test_token_renewal.py  test_wire_fixtures.py
sdk/python/vais_extension/: pyproject.toml
sdk/python/vais_extension/vais_extension/: __init__.py  _log_handler.py  host.py  middleware.py  telemetry.py  wire.py
sdk/python/vais_plugin/: __init__.py  _import_guard.py  _log_handler.py  _telemetry.py  _tokens.py  agent.py  gateway.py  models.py  testing.py
sdks/python/vais_extension/: host.py  pyproject.toml
workbench/: CHANGELOG.md  electron-builder.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+2348 files in other folders)
