[project]
name = "vais-agent-sdk"
version = "0.24.0"
description = "Python agent SDK for VAIS Runtime — implements the vais/agent.* JSON-RPC protocol over stdio."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic >=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest >=8", "pytest-asyncio >=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = ["ruff", "pytest >=8", "pytest-asyncio >=0.23"]
