[project]
name = "vais-plugin"
version = "0.1.0"
description = "Python SDK for building Vais.Agents container plugins. Implements the IP-1 container plugin protocol."
requires-python = ">=3.11"
dependencies = [
  "fastapi >=0.115,<1",
  "uvicorn[standard] >=0.30,<1",
  "httpx >=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest >=8", "pytest-asyncio >=0.23", "ruff"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
dev-dependencies = ["ruff", "pytest >=8", "pytest-asyncio >=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
