[project]
name = "sectioned-plugin"
version = "0.1.0"
description = "Reference container plugin demonstrating /v1/sections/build + the OpenAI adapter."
requires-python = ">=3.11"
dependencies = [
  "pydantic >=2.8,<3",
  "httpx >=0.27",
  # vais-agent-sdk is installed from the local monorepo path below.
  # Replace with "vais-agent-sdk>=0.26" once published to PyPI.
]

[tool.vais.plugin]
targetApiVersion = "0.26"
kind = "agent-handler"
handlerTypeName = "sectioned_plugin.agent.SectionedAgent"

[project.entry-points."vais.plugins"]
server = "sectioned_plugin.server:main"

[tool.uv]
dev-dependencies = ["pytest >=8", "pytest-asyncio >=0.23"]

[tool.uv.sources]
vais-agent-sdk = { path = "../../python-agent-sdk", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
