[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vais-extension"
version = "0.1.0"
description = "Python SDK for Vais.Agents container extensions (host: container)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
